@@ -388,6 +388,11 @@ If set, it will be used as the active build profile(s) for the package
 being built (since dpkg 1.17.2).
 It is a space separated list of profile names.
 Overridden by the \fB\-P\fP option.
+.TP
+.B DPKG_COLORS
+Sets the color mode (since dpkg 1.18.5).
+The currently accepted values are: \fBauto\fP, \fBalways\fP and
+\fBnever\fP (default).
 
 .SS Reliance on exported environment flags
 Even if \fBdpkg\-buildpackage\fP exports some variables, \fBdebian/rules\fP
