@@ -850,6 +850,11 @@ The program \fBdpkg\fP will execute when starting a new interactive shell.
 Sets the number of columns \fBdpkg\fP should use when displaying formatted
 text.
 Currently only used by \fB\-\-list\fP.
+.TP
+.B DPKG_COLORS
+Sets the color mode (since dpkg 1.18.5).
+The currently accepted values are: \fBauto\fP, \fBalways\fP and
+\fBnever\fP (default).
 .SS Internal environment
 .TP
 .B DPKG_SHELL_REASON
