@@ -71,6 +71,9 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     Prompted by Andrey Utkin <andrey.krieger.utkin@gmail.com>.
   * Promote a print to a warning for missing control files in dpkg-deb.
   * Use info() instead of print in dpkg-buildpackage and dpkg-genchanges.
+  * Add very basic color support to all dpkg namespaced programs, enabled by
+    setting the environment variable DPKG_COLORS to “auto”, “always” or
+    “never”, the latter being the default.
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
